--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.5.0",
+    "flag-icons": "^7.5.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
