changed LLM API

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.5.1",
+    "@google/generative-ai": "^0.24.1",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
